--- a/main.html
+++ b/main.html
@@ -4,11 +4,30 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+		.quotes{
+			max-width:600px;
+			margin:10px;
+			padding:15px;
+			border-left:8px solid green;
+			background-color:#f8fffe;
+			front-weight:bold;
+		}
+	</style>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<label for="captial">What is the captial of India?</label><br>
+	<input type="radio" name="c" id="delhi">
+	<label for="delhi">New Delhi</label><br>
+	<input type="radio" name="c" id=mumbai>
+	<label for="delhi">Mumbai</label>
+	<blockquote class="quotes">
+		New Delhi is the capital of India and an administrative district of NCT Delhi.
+	</blockquote>
     <script type="text/javascript" src="./script.js">
+		
 </script>
 
 </body>
