--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 	<style>
-		.quotes{
+		.quotation{
 			max-width:600px;
 			margin:10px;
 			padding:15px;
@@ -13,19 +13,42 @@
 			background-color:#f8fffe;
 			front-weight:bold;
 		}
+		/* Style for the citation in the quotation */
+.quotation cite {
+  display: block;
+  text-align: right;
+}
+		.question-container {
+  text-align: left;
+  max-width: 600px;
+  margin: 10px;
+}
+
+/* Style for the question */
+.question {
+  font-weight: bold;
+}
+
 	</style>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-	<label for="captial">What is the captial of India?</label><br>
-	<input type="radio" name="c" id="delhi">
-	<label for="delhi">New Delhi</label><br>
-	<input type="radio" name="c" id=mumbai>
-	<label for="delhi">Mumbai</label>
-	<blockquote class="quotes">
-		New Delhi is the capital of India and an administrative district of NCT Delhi.
-	</blockquote>
+ <div class="question-container">
+        <p class="question">What is the capital of India?</p>
+        <form>
+            <label>
+                <input type="radio" name="answer" value="New Delhi">
+                New Delhi
+            </label>
+            <label>
+                <input type="radio" name="answer" value="Mumbai">
+                Mumbai
+            </label>
+        </form>
+        <blockquote class="quotation">
+            New Delhi is the capital of India and an administrative district of NCT Delhi. <cite>Reference: Wikipedia</cite>
+        </blockquote>
+    </div>
     <script type="text/javascript" src="./script.js">
 		
 </script>
