--- a/main.html
+++ b/main.html
@@ -45,9 +45,11 @@
                 Mumbai
             </label>
         </form>
-        <blockquote class="quotation">
-            New Delhi is the capital of India and an administrative district of NCT Delhi. <cite>Reference: Wikipedia</cite>
-        </blockquote>
+        <blockquote class="quotation" cite="https://en.wikipedia.org/wiki/New_Delhi">
+    New Delhi is the capital of India and an administrative district of NCT Delhi.
+    <cite>Reference: Wikipedia</cite>
+</blockquote>
+
     </div>
     <script type="text/javascript" src="./script.js">
 		
